# titanic

./: README.md  pyproject.toml  requirements.txt  titanic_prediction.ipynb
src/classifier/: data_retrieval.py
src/load/: load_data.py
src/train/: train_model.py
src/transform/: split_data.py  transform_data
titanic_app/: titanic_api.py  titanic_app.py  titanic_const.py  titanic_pipe.py
titanic_train/models/: model.sav
titanic_train/src/titanic_train/: config.py  train_model.py  transformers.py
titanic_utils/: pyproject.toml
titanic_utils/src/titanic_utils/: transformers.py  utils.py
titanic_utils/tests/unit/: test_rare_label.py
titanic_utils/titanic_app/: titanic_app.py  titanic_apputils.py  titanic_pipe.py
titanic_utils/titanic_train/models/: model.sav
titanic_utils/titanic_train/src/: config.py  train_model.py  utils.py
titanic_utils/titanic_utils/: setup.py  transformers.py
