[tool.poetry]
name = "titanic"
version = "1.0"
description = "Project to predict survivors of the titanic"
authors = ["OmarJehovani <omar@itsa.edu.mx>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
