[tool.poetry]
name = "titanic-utils"
version = "0.1.0"
description = ""
authors = ["OmarJehovani <omar@itsa.edu.mx>"]
readme = "README.md"
packages = [{include = "titanic_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
